fix overflow horizontal mobile screens

--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 0;
 }
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
@@ -25,7 +26,6 @@ body {
   color: var(--clr-neutral-white);
   background-color: var(--clr-primary-green-dark);
   text-rendering: optimizeSpeed;
-  overflow-x: hidden;
 }
 
 /* A elements that don't have a class get default styles */
